# psibehavior

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
psibehavior/: README.md
psibehavior/app/: app.enaml  launcher.py  launcher_view.enaml  main.py
psibehavior/paradigms/: __init__.py  api.py  base_behavior_plugin.py  behavior_mixins.enaml  behavior_nafc.enaml  behavior_nafc_plugin.py  cue.enaml  logger.enaml  metadata.enaml  monitor.enaml  nafc_analysis.enaml  reward.enaml  sdt_analysis.enaml  stim.py  timeout.enaml  trial_log.enaml  trial_manager.enaml  trial_manager_plugin.py  video.enaml
